# django-test

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  fill_data.sql
src/apps/foods/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/foods/migrations/: 0001_initial.py
src/core/: asgi.py  settings.py  urls.py
